address sourcery comments
Signed-off-by: Saad Khan <saakhan@ibm.com>